feat: new function Request new tokens
